--- a/index.html
+++ b/index.html
@@ -4,31 +4,21 @@
 <!-- A tag html inicia o nosso documento, 
  o atributo lang informa qual idioma do conteúdo da página -->
 <html lang="pt-br">
+    <head>
+        <!-- o título aparece na aba do navegador -->
+        <title>Minha primeira página</title>
 
-<head>
-    <!-- o título aparece na aba do navegador -->
-    <title>Minha primeira página</title>
-
-    <!-- o meta charset informa qual conjunto 
+        <!-- o meta charset informa qual conjunto 
          de caracteres será utilizado-->
-    <meta charset="utf-8" />
-</head>
+        <meta charset="utf-8"/>
+    </head>
+    <body>
+        <h1>Minha história</h1>
 
-<body>
-    <h1>Minha história</h1>
+        <h2>Felipe Ribas</h2>
 
-    <p>Sou o <strong>José Romualdo</strong>, nasci na cidade de São Paulo em 1.992</p>
-
-    <h2>De onde vim</h2>
-
-    <p>
-        Eu nasci em 04 de novembro de 1.992 em um bairro de São Paulo chamado saúde. <br/> Saúde é um bairro da sona sul de São Paulo.
-    </p>
-    <p>Lorem ipsum</p>
+        <p><strong>Designer</strong> com experiência em <strong>direção de arte, comunicação corporativa e criação in-house</strong>. Atuação no departamento de marketing de industrias, com foco em gerenciamento de projetos e desenvolvimento de novos produtos.</p>
 
 
-
-
-</body>
-
+    </body>
 </html>
