feat: exercício aula 02

--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -13,7 +13,7 @@
     <h2> Porque ser Programador?</h2>
     <p> Porque ja sou Designer!</p>
     <p> Porque quero aumentar meu arsenal de ferramentas.</p>
-    <p> Para ter um salário maior.</p>
+    <h3> Para ter um salário maior</h3>
 
     </p>
 </body>
